bug fixed and updated
